--- a/project/templates/new_reply.html
+++ b/project/templates/new_reply.html
@@ -43,6 +43,9 @@
                             </li>
                         </ul>
                     </div>
+                    <br>
+                    <br>
+                    <iframe width="730" height="450" style="border:0" loading="lazy" allowfullscreen src={{event.get_place}}></iframe>
                     <div class="blog__details__desc">
                     </div>
                     <div class="blog__details__tags">
