--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -275,7 +275,7 @@ ol {
     height: 100%;
     left: 0;
     top: 0;
-    background: #ffffff;
+    background: #ffffff8e;
     z-index: 99999;
 }
 
