--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -6,8 +6,16 @@
         <div class="card">
             <div class="card-body">
                 <div class="d-flex flex-column align-items-center text-center"> {% if profile.profile_picture %}
-                    <img src="{{ profile.profile_picture.url }}" alt="Admin" class="rounded-circle" width="150" height="150"> {% else %} {% if profile.gender == 'Male' %}<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle"
-                        width="150"> {% else %} {% if profile.gender == 'Female' %}<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %} {% endif %}
+                    <img style="  height: 150px;
+                    width: 150;
+                    object-fit: cover;
+                    border-radius: 80%;" src="{{ profile.profile_picture.url }}" alt="Admin" class="rounded-circle"> {% else %} {% if profile.gender == 'Male' %}<img style="  height: 150px;
+                    width: 150;
+                    object-fit: cover;
+                    border-radius: 80%;" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="Admin" class="rounded-circle" width="150"> {% else %} {% if profile.gender == 'Female' %}<img style="  height: 150px;
+                        width: 150;
+                        object-fit: cover;
+                        border-radius: 80%;" src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %} {%endif%}
                     <div class="mt-3">
                         <h4>{{profile.user.username}}</h4>
                         <p class="text-muted font-size-sm"> <a id="follower-number" href="{% url 'followers' profile.user.id %}">{{profile.get_num_of_followers}} </a> followers</p> {% if user.is_authenticated %} {% if not profile.user == user %} {% if followed %}
