--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}{% load static %}{% load widget_tweaks %} {% block content %}
 
-
 <!-- Banner Section Begin -->
 <section class="banner set-bg " data-setbg="{% static 'img/banner/banner-new.jpg' %} ">
     <div class="container ">
@@ -111,8 +110,8 @@
                         <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/no_image.png' %}"> {% endif %}
                             <div class="label new">New</div>
                             <ul class="product__hover">
-                                <li><a href="{{ event.event_picture.url }}" class="image-popup"><span class="arrow_expand"></span></a></li>
-                                <li><a><span id='like' data-id='{{event.pk}}' class="icon_heart_alt"></span>  {{ event.get_likes_count }}</a></li>
+                                <li><a href="{{ event.event_picture.url }}" class="image-popup"><span class="arrow_expand" style="margin-top:12px;"></span></a></li>
+                                <li><a><span class="icon_heart_alt"></span>  {{ event.get_likes_count }}</a></li>
                                 <li><a href="{% url 'new_reply' event.pk %}"><span class="fa fa-reply"></span>  {{ event.get_replies_count }} </a></li>
                             </ul>
                         </div>
@@ -145,8 +144,8 @@
                         <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/no_image.png' %}"> {% endif %}
                             <div class="label stockout">{{event.date}}</div>
                             <ul class="product__hover">
-                                <li><a href="{{ event.event_picture.url }}" class="image-popup"><span class="arrow_expand"></span></a></li>
-                                <li> <a><span id='like' data-id='{{event.pk}}' class="icon_heart_alt "></span>  {{ event.get_likes_count }}</a></li>
+                                <li><a href="{{ event.event_picture.url }}" class="image-popup"><span class="arrow_expand" style="margin-top:12px;"></span></a></li>
+                                <li> <a><span class="icon_heart_alt "></span>  {{ event.get_likes_count }}</a></li>
                                 <li><a href="{% url 'new_reply' event.pk %} "><span class="fa fa-reply "></span>  {{ event.get_replies_count }} </a></li>
                             </ul>
                         </div>
@@ -165,6 +164,7 @@
             </div>
         </div>
 </section>
+
 
 
 <!-- Trend Section Begin -->
@@ -286,27 +286,5 @@
     </div>
 </section>
 
-<!--<script>
-    $('#like').click(function(e) {
-        var a = $(this);
-        var event_pk = $(this).data('id');
-        $.ajax({
-            type: "POST ",
-            url: "{% url 'like' %} ",
-            data: {
-                'event_pk': '{{event_pk}}',
-                'csrfmiddlewaretoken': '{{ csrf_token }}'
-            },
-            dataType: "json ",
-            success: function(response) {
-                console.log(event_pk)
-                console.log(response)
-            },
-            error: function(rs, e) {
-                alert(rs.responseText);
-            }
-        });
-    })
-</script> -->
 <!-- Trend Section End -->
 {% endblock %}
