--- a/project/templates/liked_events.html
+++ b/project/templates/liked_events.html
@@ -26,8 +26,8 @@
                         <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/no_image.png' %}"> {% endif %}
                             <div class="label stockblue">{{ liked_event.event.date }} </div>
                             <ul class="product__hover">
-                                <li><a href="{{ liked_event.event.event_picture.url }}" class="image-popup"><span class="arrow_expand"></span></a></li>
-                                <li><a href="#"><span class="icon_heart_alt"></span>  {{ liked_event.event.get_likes_count }}</a></li>
+                                <li><a href="{{ liked_event.event.event_picture.url }}" class="image-popup"><span class="arrow_expand" style="margin-top:12px;"></span></a></li>
+                                <li><a><span class="icon_heart_alt"></span>  {{ liked_event.event.get_likes_count }}</a></li>
                                 <li><a href="{% url 'new_reply' liked_event.event.pk %}"><span class="fa fa-reply"></span>  {{ liked_event.event.get_replies_count }} </a></li>
                             </ul>
                         </div>
