--- a/project/templates/search_results.html
+++ b/project/templates/search_results.html
@@ -16,8 +16,8 @@
                         <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/no_image.png' %}"> {% endif %}
                             <div class="label stockblue">{{ result.date }} </div>
                             <ul class="product__hover">
-                                <li><a href="{{ result.event_picture.url }}" class="image-popup"><span class="arrow_expand"></span></a></li>
-                                <li><a href="#"><span class="icon_heart_alt"></span>  {{ result.get_likes_count }}</a></li>
+                                <li><a href="{{ result.event_picture.url }}" class="image-popup"><span class="arrow_expand" style="margin-top:12px;"></span></a></li>
+                                <li><a><span class="icon_heart_alt"></span>  {{ result.get_likes_count }}</a></li>
                                 <li><a href="{% url 'new_reply' result.pk %}"><span class="fa fa-reply"></span>  {{ result.get_replies_count }} </a></li>
                             </ul>
                         </div>
