--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -151,6 +151,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">events</i>Recommended Events</h6>
+                        {% for recommended_event in recommended_events %}
+                        <small><a href="#" class="text">{{recommended_event.name}}</a> <p class="text-muted font-size-sm">{{recommended_event.category.name}}</p></small> {% endfor %}
+                    </div>
+                </div>
+            </div>
         </div>
 
 
