--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -16,7 +16,7 @@
         </div>
         <div class="text-center py-2">
             <small>
-          <a href="{% url 'password_reset' %}" class="text-muted">Forgot your password?</a>
+          <a href="{% url 'password_reset' %}" class="text" style="color:rgb(0, 0, 0); background-color: rgba(223, 223, 223, 0.836);">Forgot your password?</a>
         </small>
         </div>
     </div>
